--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,18 @@
 <html>
 <head>
 <title> Biography </title>
+<link rel="stylesheet" href="bio.css" />
 </head>
 <body>
+<p id="title"> Biography </p>
+<p id="content">
+I am a student studying computer science and economics at Tufts University
+in Medford, MA. As an international student from Taiwan, I am interested in
+issues pertaining to Asians and Asian Americans. Outside of the classroom, I
+enjoy listening to music, playing the drums, watching movies, and
+traveling.
+</p>
+<br/>
+<p id="link"> <a href="index.html"> Back to Home </a> </p>
 </body>
 </html>
